# UserIdentification

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  api.md
applications/: CMakeLists.txt
applications/app1/: CMakeLists.txt  do_something.cpp  run_detection.cpp
applications/auto_classifier_training/: CMakeLists.txt  auto_training.cpp
applications/blur_labeling/: CMakeLists.txt  blur_labeling.cpp
applications/embeddings_from_images/: CMakeLists.txt  embeddings_from_imgs.cpp
applications/face_captures/: CMakeLists.txt  face_captures.cpp
applications/face_capturing/: CMakeLists.txt  face_capturing.cpp
applications/face_masking/: CMakeLists.txt  face_masking.cpp
applications/image_labeler/: CMakeLists.txt  image_labeler.cpp
applications/img_converter/: CMakeLists.txt  img_converter.cpp
applications/network_benchmark/: CMakeLists.txt  network_benchmark.cpp
applications/offline_identification/: CMakeLists.txt  offline_identification.cpp
applications/offline_training/: CMakeLists.txt  offline_training.cpp
applications/online_emu/: CMakeLists.txt  online_emu.cpp
applications/online_identification/: CMakeLists.txt  online_identification.cpp
benchmarking/: CMakeLists.txt
benchmarking/communication/: CMakeLists.txt  communication.cpp
benchmarking/feature_generation/: CMakeLists.txt  face_alignment.cpp  feature_generation.cpp
benchmarking/ping/: CMakeLists.txt
benchmarking/tracking/: CMakeLists.txt  skeletalFaceDetection.cpp
cmake/: FindDlib.cmake  FindKinectSDK2.cmake  ProjectMacros.cmake
demos/: CMakeLists.txt
demos/client/: CMakeLists.txt  client.cpp
demos/get_profile_pictures/: CMakeLists.txt
demos/identify_user/: CMakeLists.txt  identify_user.cpp
doc/: api.md
identification_node/: Dockerfile  README.md  requirements.txt  server.py
identification_node/db/: README.md  userdb_v1-0.pkl
identification_node/models/classification/: Linear_SVM_classifier.pkl  svm_classifier.pkl
identification_node/models/embedding_samples/: embeddings_christian.pkl  embeddings_elias.pkl  embeddings_elias_glasses.pkl  embeddings_laia.pkl  embeddings_matthias.pkl
identification_node/src/: NCM.py  alignment_server.py  client.py  config.py  core.py  eval_embeddings.py  generate_embeddings.py  metric_evaluation.py  novelty_detector.py  server.py  training_server.py
identification_node/src/lib/: DataAnalysis.py  EmbeddingClassifier.py  EmbeddingGen.py  FaceEmbedding.py  IsolationForest.py  OfflineUserClassifier.py  RandomForest.py  SVM.py  TCPServer.py  UserDB.py
identification_node/src/request/: CalcEmbedding.py  CollectEmbeddingsByName.py  Identification.py  ImageIdentification.py  __init__.py
identification_node/test/: basics.py  tcp_test_server.py
include/: README.md
include/base/: UserIdentification.h
include/features/: Face.h  Skin.h
include/gui/: GUI.h  UserView.h
include/imgproc/: ImgProcessing.h
include/io/: CSVHandling.h  ImageHandler.h  KinectInterface.h  Networking.h  RequestHandler.h  RequestTypes.h  ResponseTypes.h  kinect.h  talker.h
include/math/: Math.h
include/recognition/: BodyParts.h  LowerBodyRecognition.h  TorsoRecognition.h
include/segmentation/: connectedcomponents.h  facemasker.h  headsegmenter.h
include/tracking/: FaceTracker.h  OpticalFlow.h  SkeletonTracker.h
include/user/: BaseUserManager.h  BatchUserManager.h  StreamUserManager.h  User.h  UserManager.h
reporting/: kw10.md  kw_1.md  kw_10.md  kw_11.md  kw_12.md  kw_2.md  kw_3.md  kw_4.md  kw_42.md  kw_43.md  kw_44.md  kw_45.md  kw_46.md  kw_47.md  kw_48.md  kw_49.md  kw_5.md  kw_50.md  kw_51.md  kw_6.md  kw_7.md  kw_8.md  kw_9.md  report_template.md
reporting/project_schedule/: project_schedule_v1.0.xlsx  project_schedule_v1.xlsx
src/: CMakeLists.txt  Config.cmake.in
src/features/: CMakeLists.txt  Face.cpp  Skin.cpp
src/gui/: CMakeLists.txt  UserView.cpp
src/imgproc/: CMakeLists.txt  ImgProcessing.cpp
src/io/: CMakeLists.txt  CSVHandling.cpp  ImageHandler.cpp  KinectInterface.cpp  KinectInterfaceUnified.cpp  Networking.cpp  RequestHandler.cpp  RequestTypes.cpp  ResponseTypes.cpp  kinect.cpp  talker.cpp
src/math/: CMakeLists.txt  Math.cpp
src/recognition/: CMakeLists.txt  LowerBodyRecognition.cpp  TorsoRecognition.cpp
src/segmentation/: CMakeLists.txt  connectedcomponents.cpp  facemasker.cpp  headsegmenter.cpp
src/tracking/: CMakeLists.txt  FaceTracker.cpp  OpticalFlow.cpp  SkeletonTracker.cpp
src/user/: BaseUserManager.cpp  BatchUserManager.cpp  CMakeLists.txt  StreamUserManager.cpp  User.cpp  UserManager.cpp
test/: CMakeLists.txt
test/basics/: CMakeLists.txt
test/classification/: CMakeLists.txt  classifierTraining.cpp
test/components/: CMakeLists.txt
test/components/FaceGrid/: CMakeLists.txt  FaceGrid.cpp
test/components/IO/: CMakeLists.txt  CSVHandling.cpp  ImageHandler.cpp  ResponseTypes.cpp
test/components/ImgProc/: CMakeLists.txt  FocusMeasure.cpp
test/components/Math/: Array3D.cpp  CMakeLists.txt  UniqueSetAssoc.cpp
test/components/Queue/: CMakeLists.txt  Queue.cpp
test/components/User/: CMakeLists.txt  User.cpp
test/detection/: CMakeLists.txt  bodyPartSegmentation.cpp  lowerBodyDetection.cpp  skinDetection.cpp  torsoDetection.cpp
test/networking/: CMakeLists.txt  parallel_connections.cpp  tcp_client.cpp  tcp_messaging.cpp
test/recognition/: CMakeLists.txt  FaceProfiling.cpp
test/threading/: CMakeLists.txt  threading.cpp
test/tracking/: CMakeLists.txt  alignmentComparison.cpp  faceTracking.cpp  opticalFlow.cpp  skeletalFaceDetection.cpp
test/v2/: CMakeLists.txt  test_components.cpp  v2_components.cpp  v2_weights.cpp
uids/: .gitignore  BaseImage.Dockerfile  Dockerfile  README.md  requirements.txt  server.py
uids/apps/: combine_embeddings.py  face_aligner.py  generate_embeddings.py  metric_evaluation.py  metric_learning.py  visualize_cnn_layers.py
uids/services/v2/: config.py  (+3 more)
uids/test/: .gitignore  basics.py  msg_routing.py  pairwise.py  visualize_outliers.py
uids/uids/: OfflineClassifierBase.py  UserDB.py  config.py  feature_space.py  metric_evaluation.py  metric_learning.py
(+127 files in other folders)
