PROJECT(USER_IDENTIFICATION_APPLICATIONS)

SET(USER_IDENTIFICATION_APPLICATION_DIR ${PROJECT_SOURCE_DIR})

SET(TARGET_DEFAULT_PREFIX "application_")
SET(TARGET_DEFAULT_LABEL_PREFIX "Applications")
# IDE folder
SET(TARGET_DEFAULT_FOLDER "Applications")

# project libraries for all applications
SET(TARGET_COMMON_LIBRARIES 
    # yourAdditionalLib
	IO
	User
	gflags
	Tracking
)

ADD_SUBDIRECTORY(app1)
ADD_SUBDIRECTORY(face_captures)
ADD_SUBDIRECTORY(embeddings_from_images)
