PROJECT(USER_IDENTIFICATION_BENCHMARKS)

SET(USER_IDENTIFICATION_BENCHMARKS_DIR ${PROJECT_SOURCE_DIR})

SET(TARGET_DEFAULT_PREFIX "benchmark_")
SET(TARGET_DEFAULT_LABEL_PREFIX "")
# IDE folder
SET(TARGET_DEFAULT_FOLDER "Benchmark")

# project libraries for all applications
SET(TARGET_COMMON_LIBRARIES 
    # yourAdditionalLib
	IO
	gflags
	ImgProc
)

ADD_SUBDIRECTORY(ping)
ADD_SUBDIRECTORY(communication)
ADD_SUBDIRECTORY(feature_generation)
ADD_SUBDIRECTORY(tracking)
