PROJECT(USER_IDENTIFICATION_DEMOS)

SET(USER_IDENTIFICATION_DEMOS_DIR ${PROJECT_SOURCE_DIR})

SET(TARGET_DEFAULT_PREFIX "demo_")
SET(TARGET_DEFAULT_LABEL_PREFIX "")
# IDE folder
SET(TARGET_DEFAULT_FOLDER "Demos")

# project libraries
SET(TARGET_COMMON_LIBRARIES 
    # yourAdditionalLib
	Tracking
	IO
	User
	gflags
	ImgProc
	GUI
)

ADD_SUBDIRECTORY(get_profile_pictures)
ADD_SUBDIRECTORY(identify_user)