PROJECT(USER_IDENTIFICATION_TESTS)

SET(USER_IDENTIFICATION_TESTS_DIR ${PROJECT_SOURCE_DIR})

SET(TARGET_DEFAULT_PREFIX "test_")
SET(TARGET_DEFAULT_LABEL_PREFIX "")
# IDE folder
SET(TARGET_DEFAULT_FOLDER "Unit Tests")

# project libraries for all applications
SET(TARGET_COMMON_LIBRARIES 
    # yourAdditionalLib
	IO
)

ADD_SUBDIRECTORY(networking)
ADD_SUBDIRECTORY(tracking)
