PROJECT(USER_IDENTIFICATION_UNIT_TESTS)

SET(USER_IDENTIFICATION_UNIT_TESTS_DIR ${PROJECT_SOURCE_DIR})

SET(TARGET_DEFAULT_PREFIX "unittest_")
SET(TARGET_DEFAULT_LABEL_PREFIX "")
# IDE folder
SET(TARGET_DEFAULT_FOLDER "Unittest")

# project libraries for all applications
SET(TARGET_COMMON_LIBRARIES 
    # yourAdditionalLib
	IO
	gflags
)

ADD_SUBDIRECTORY(IO)
ADD_SUBDIRECTORY(Math)